Add TLS support to client and server
- Add TLS certificate generation Makefile targets - Enable TLS
configuration and flags in server main - Support CA cert and insecure
TLS options in client API - Add TLS-related flags to client and server
CLI - Update .gitignore to exclude local certs directory - Expand README
with detailed usage, architecture, and docs

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ build/
 # Client config (may contain sensitive data)
 .gophkeeper/
 gophkeeper.yaml
+
+# TLS certificates (generated locally for development)
+certs/
