--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -44,13 +44,13 @@ jobs:
 
     - name: Test
       run: |
-        go test -timeout=60s -race -covermode=atomic -coverprofile=$GITHUB_WORKSPACE/profile.cov_tmp ./...
-        cat $GITHUB_WORKSPACE/profile.cov_tmp | grep -v "_mock.go" > $GITHUB_WORKSPACE/profile.cov
+        go test -timeout=60s -race -covermode=atomic -coverprofile=profile.cov_tmp ./...
+        cat profile.cov_tmp | grep -v "_mock.go" > profile.cov
 
     - name: Update coverage report
       uses: ncruces/go-coverage-report@v0
       with:
-        coverage-file: $GITHUB_WORKSPACE/profile.cov
+        coverage-file: profile.cov
         report: true
         chart: true
         amend: true
